contact section added

--- a/index.html
+++ b/index.html
@@ -140,6 +140,24 @@
         </div>
       </div>
       <!-- Subscription Section End -->
+
+      <!-- Contact Section Started -->
+      <div class="contactSection">
+        <div class="container contactSectionContainer">
+          <div class="contactInfo">
+            <h1>Contact Us!</h1>
+            <p>Florida, USA</p>
+            <p>+902 (304) 099</p>
+            <p>flowershop@gmail.com</p>
+          </div>
+          <div class="contactForm">
+            <input type="email" />
+            <textarea cols="30" rows="10"></textarea>
+            <button class="btnPrimary">Send</button>
+          </div>
+        </div>
+      </div>
+      <!-- Contact Section Ended -->
     </main>
     <footer>
       <div class="footercontainer">
