--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/e27eb24136.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -145,15 +149,22 @@
       <div class="contactSection">
         <div class="container contactSectionContainer">
           <div class="contactInfo">
-            <h1>Contact Us!</h1>
-            <p>Florida, USA</p>
-            <p>+902 (304) 099</p>
-            <p>flowershop@gmail.com</p>
+            <h1 class="contactTitle">Contact Us!</h1>
+            <p><i class="fa-solid fa-location-dot"></i> Florida, USA</p>
+            <p><i class="fa-solid fa-phone"></i> +902 (304) 099</p>
+            <p><i class="fa-solid fa-envelope"></i> flowershop@gmail.com</p>
+            <p><i class="fa-brands fa-instagram"></i> Flower_Shop</p>
           </div>
           <div class="contactForm">
-            <input type="email" />
-            <textarea cols="30" rows="10"></textarea>
-            <button class="btnPrimary">Send</button>
+            <h2 class="contactTitle">Let us know your demand!</h2>
+            <input type="email" placeholder="Enter your email here...." />
+            <textarea
+              cols="30"
+              rows="5"
+              placeholder="Enter your message here..."
+            ></textarea
+            ><br />
+            <button class="btnPrimary sendbtn">Send</button>
           </div>
         </div>
       </div>
