extra section your finished

--- a/index.html
+++ b/index.html
@@ -150,10 +150,22 @@
         <div class="container contactSectionContainer">
           <div class="contactInfo">
             <h1 class="contactTitle">Contact Us!</h1>
-            <p><i class="fa-solid fa-location-dot"></i> Florida, USA</p>
-            <p><i class="fa-solid fa-phone"></i> +902 (304) 099</p>
-            <p><i class="fa-solid fa-envelope"></i> flowershop@gmail.com</p>
-            <p><i class="fa-brands fa-instagram"></i> Flower_Shop</p>
+            <p>
+              <i class="fa-solid fa-location-dot"></i>
+              <span class="text_underline">Location:</span> Florida, USA
+            </p>
+            <p>
+              <i class="fa-solid fa-headset"></i>
+              <span class="text_underline">Hotline:</span> +902 (304) 099
+            </p>
+            <p>
+              <i class="fa-solid fa-envelope"></i>
+              <span class="text_underline">E-mail:</span> flowershop@gmail.com
+            </p>
+            <p>
+              <i class="fa-brands fa-instagram"></i>
+              <span class="text_underline">Instagram:</span> Flower_Shop
+            </p>
           </div>
           <div class="contactForm">
             <h2 class="contactTitle">Let us know your demand!</h2>
