--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </p>
           </div>
           <div class="contactForm">
-            <h2 class="contactTitle">Let us know your demand!</h2>
+            <h2 class="contactTitle">Let us know your demands!</h2>
             <input type="email" placeholder="Enter your email here...." />
             <textarea
               cols="30"
